# redis_mq

./: Dockerfile  README.md  docker-compose.yml  setup.cfg
src/: main.py
src/endpoints/: docs.py  job.py  scheduler.py  status.py
src/executor/: __init__.py  message_queue.py  worker.py
src/scheduler/: __init__.py  message_queue.py  worker.py
src/tests/endpoints/: test_docs.py  test_scheduler.py  test_status.py
src/tests/scheduler/: test_message_queue.py  test_worker.py
src/utils/: common_logger.py  custom_error_handlers.py  types.py
