[metadata]
name = redis_mq
version = v0.0.1

author = Akihiro Inui
description = Hand Made Redis MQ
url = https://github.com/akihiro-inui/redis_mq

[options]
packages = find:
python_requires = >=3.8.0


[options.extras_require]
api =
    fastapi>=0.64.0
    requests==2.25.1

mq =
    rq>=1.11.0
    redis>=3.5.3

server =
    uvicorn>=0.15.0
    %(api)s
    %(mq)s

tests =
    mypy>=0.910
    pytest>=6.2.5
    black>=21.9b0

all =
    %(server)s
    %(tests)s


[mypy]
files = src
ignore_missing_imports = True
disallow_untyped_defs = True
warn_redundant_casts = True
install_types = True
non_interactive = True
